# NLP-GroupProject

front/: README.md  index.html  package-lock.json  package.json
front/src/: App.vue
front/src/services/: api.ts
script/: .gitignore  README.md  api.py  builder.py  pyproject.toml  query.py  stats.py
